# ogr-opti

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  exploration.py  mkdocs.yml  ogr_main.py  pyproject.toml  run.py
docs/: index.md
models/: ogr.mod  ogr_3.mod
ogr/: __init__.py  exceptions.py  exploration.py  generation.py  models.py  ruler.py  scripts.py
ogr/ampl/: __init__.py  ogr.mod
report/: report.html  report.qmd
